--- a/res/config.toml
+++ b/res/config.toml
@@ -1,9 +1,11 @@
 # Offset
-horizontal-offset = 90
-vertical-offset = 10
+horizontal-offset = 30
+vertical-offset = 120
 
 # Alignment (2 is for top right)
 # 0 1 2
 # 3 4 5
 # 6 7 8
 alignment = 2
+
+refresh-min = 60
