--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ config = {default-features = false, version = "0.10.1", features = ["toml"]}
 reqwest = {version = "0.11.0", features = ["blocking"]}
 serde_json = "1.0"
 x11rb = {version = "0.8.0", features = ["allow-unsafe-code", "render"]}
+regex = {version = "1.4.3"}
